@@ -35,6 +35,7 @@ Version 1.2.1+svn:
     * scrolling performance improved
     * selecting a units is faster now, especially switching between two units
     * overall game performance improved when many units are visible
+    * better performance when mouse is over a unit that sees many enemy units
  * WML engine
     * fixed a bug which returned wrong values if a random number was negative
 
